tests/toylang/neg/001630_mutation.toylang
program a = { while a do sleep int; } .
